1.Moved menu nav to left 2.changed menu color to red when hovered

--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
     <h1>Profile webpage</h1>
     <h2>Alexander S. Chung</h2>
   </div>
-<!-- ========== main menu ========== -->
-  <div class="main-section">
-    <nav id="menu">
-      <a href="index.html" class="submenu">home</a>
-      <a href="gallery.html" class="submenu">gallery</a>
-      <a href="more.html" class="submenu">more</a>
-    </nav>
-  </div>
-
+  <!-- ========== main menu ========== -->
+    <div id="main-section">
+        <a href="index.html" class="submenu">home</a>
+        <a href="gallery.html" class="submenu">gallery</a>
+        <a href="more.html" class="submenu">more</a>
+    </div>
 <!-- ========== article ========== -->
   <div class="article-section">
     <div id="profile-image"><img id="image" src="images/alexchung.jpg" alt="alexchung"></div>
