--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
 </head>
 
 <body>
+  <!-- ========== site top header ========== -->
+    <div id="site-header">
+      <div id="site-logo">
+        alswch
+      </div>
+      <div id="nav-menu">
+        <a href="index.html" class="submenu">home</a>
+        <a href="gallery.html" class="submenu">gallery</a>
+        <a href="more.html" class="submenu">more</a>
+      </div>
+    </div>
 <!-- ========== header ========== -->
   <div class="header">
     <h1>Profile webpage</h1>
     <h2>Alexander S. Chung</h2>
   </div>
-  <!-- ========== main menu ========== -->
-    <div id="main-section">
-        <a href="index.html" class="submenu">home</a>
-        <a href="gallery.html" class="submenu">gallery</a>
-        <a href="more.html" class="submenu">more</a>
-    </div>
 <!-- ========== article ========== -->
   <div class="article-section">
     <div id="profile-image"><img id="image" src="images/alexchung.jpg" alt="alexchung"></div>
