nav bar #1 fixed

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 
 <body>
   <!-- ========== site top header ========== -->
-    <div id="site-header">
-      <div id="site-logo">
-        alswch
-      </div>
-      <div id="nav-menu">
-        <a href="index.html" class="submenu">home</a>
-        <a href="gallery.html" class="submenu">gallery</a>
-        <a href="more.html" class="submenu">more</a>
-      </div>
+  <div id="site-header-box">
+    <div id="site-logo-box">
+      alswch
     </div>
+    <div id="nav-menu-box">
+      <a href="home" class="submenu">home</a>
+      <a href="gallery" class="submenu">gallery</a>
+      <a href="more" class="submenu">more</a>
+    </div>
+  </div>
 <!-- ========== header ========== -->
-  <div class="header">
+  <!-- <div class="header">
     <h1>Profile webpage</h1>
     <h2>Alexander S. Chung</h2>
-  </div>
+  </div> -->
 <!-- ========== article ========== -->
   <div class="article-section">
     <div id="profile-image"><img id="image" src="images/alexchung.jpg" alt="alexchung"></div>
